--- a/less/form.less
+++ b/less/form.less
@@ -1,14 +1,14 @@
 .form {
   @media (min-width: @tablet-width) {
-    width: 75%;
-    padding: 6%;
+    width: 94%;
+    padding: 0;
     padding-top: 0;
     border: 2px solid #e5e5e5;
   }
 
   @media (min-width: @desktop-width) {
-    width: 434px;
-    margin-left: 45px;
+    width: 435px;
+    margin-left: 34px;
     padding: 0;
     margin-top: 0;
     margin-right: auto;
@@ -18,8 +18,10 @@
 
 .form__user-contacts {
   @media (min-width: @tablet-width) {
-    width: 75%;
-    padding: 6%;
+    width: 94%;
+    padding-right: 6%;
+    padding-left: 6%;
+    padding-bottom: 15px;
     padding-top: 0;
     border: 2px solid #e5e5e5;
     margin-top: 50px;
@@ -28,33 +30,35 @@
   @media (min-width: @desktop-width) {
     display: flex;
     justify-content: space-between;
-    width: 97%;
+    width: 98%;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-left: 20px;
     margin-right: auto;
     margin-top: 0;
     align-items: center;
-    padding-right: 48px;
+    padding-right: 56px;
     padding-bottom: 25px;
   }
 }
 
 .form--achievments-page {
   @media (min-width: @tablet-width) {
-    width: 75%;
-    padding: 6%;
+    width: 94%;
+    padding-left: 6%;
+    padding-right: 6%;
     padding-top: 0;
     border: 2px solid #e5e5e5;
+    margin-top: 39px;
+    padding-bottom: 31px;
   }
 
   @media (min-width: @desktop-width) {
     display: flex;
     justify-content: space-between;
-    width: 97%;
+    width: 98%;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-left: 20px;
+    margin-left: 10px;
     margin-right: auto;
     margin-top: 0;
     align-items: center;
@@ -64,18 +68,22 @@
 }
 
 .form--feedback {
+  @media (min-width: @tablet-width) {
+    padding-bottom: 44px;
+  }
+
   @media (min-width: @desktop-width) {
     display: flex;
     justify-content: space-between;
-    width: 97%;
+    width: 98%;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-left: 20px;
+    margin-left: 11px;
     margin-right: auto;
     margin-top: 0;
     align-items: center;
     padding-right: 0;
-    padding-bottom: 10px;
+    padding-bottom: 38px;
   }
 }
 
