--- a/less/header.less
+++ b/less/header.less
@@ -21,3 +21,13 @@
     padding-bottom: 89px;
   }
 }
+
+.page-header--form {
+  @media (min-width: @tablet-width) {
+    padding-bottom: 60px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 75px;
+  }
+}
