--- a/less/input-form.less
+++ b/less/input-form.less
@@ -6,12 +6,19 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-right: 40px;
+  }
+}
+
+.input-form {
+  padding-bottom: 13px;
+
+  @media (min-width: @tablet-width) {
+    width: 50%;
   }
 }
 
 .input-form__input-label {
-  padding-left: 44px;
+  padding-left: 20px;
   text-transform: uppercase;
   color: #d22856;
   width: 75%;
@@ -22,7 +29,9 @@
 
   @media (min-width: @tablet-width) {
     margin: 0;
-    width: 14%;
+    width: auto;
+    padding-top: 20px;
+    padding-left: 0;
   }
 
   @media (min-width: @desktop-width) {
@@ -32,27 +41,28 @@
 }
 
 .input-form__input {
-  padding-left: 20px;
+  padding-left: 39px;
 
   .font-mixin(30px; @header-font; 18px; normal);
   padding-bottom: 32px;
   margin-top: 4px;
-  margin-left: 15px;
+  margin-left: 3px;
   width: 76%;
   padding-right: 22px;
 
   @media (min-width: @tablet-width) {
-    width: 67%;
+    width: 540px;
     padding-left: 0;
     margin-bottom: 50px;
     margin-top: 0;
+    margin-left: 22px;
   }
 
   @media (min-width: @desktop-width) {
-    margin-left: 24px;
+    margin-left: 22px;
     padding-right: 18px;
-    width: 331px;
-    height: 59px;
+    width: 317px;
+    height: 63px;
     padding-top: 0;
     padding-left: 0;
     padding-bottom: 0;
@@ -62,6 +72,6 @@
 
 .input-form__input-label--short_letters {
   @media (min-width: @desktop-width) {
-    width: 377px;
+    width: 364px;
   }
 }
