--- a/less/form-section.less
+++ b/less/form-section.less
@@ -3,16 +3,25 @@
 }
 
 .form-section__text-area {
+  width: 262px;
+  padding-left: 1px;
+  padding-top: 10px;
+  padding-right: 12px;
+  height: 190px;
+  margin-left: 0;
+
   @media (min-width: @tablet-width) {
-    width: 94%;
+    width: 79%;
+    height: 183px;
     margin-right: 61px;
     margin-top: 13px;
-    margin-left: 15px;
+    margin-left: 54px;
+    padding-left: 0;
 
     @media (min-width: @desktop-width) {
       height: 115px;
       margin-left: 25px;
-      width: 94%;
+      width: 92%;
     }
   }
 }
