--- a/less/label-block.less
+++ b/less/label-block.less
@@ -1,9 +1,18 @@
 .label-block {
+  margin-bottom: 18px;
+
+  @media(min-width:@tablet-width) {
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
+  }
+
   @media (min-width: @desktop-width) {
     display: flex;
     flex-direction: column;
     width: 378px;
-    padding-bottom: 18px;
+    padding-bottom: 5px;
+    padding-left: 0;
   }
 }
 
@@ -13,7 +22,6 @@
     // height: 0;
     // padding:0;
     // width: 0;
-    margin-top: 30px;
   }
 }
 
