--- a/less/describe-block.less
+++ b/less/describe-block.less
@@ -1,15 +1,15 @@
 .describe-block {
   width: 100%;
   text-align: center;
-  padding-bottom: 63px;
+  padding-bottom: 42px;
 
-  @media (min-width: @desktop-width) {
-    padding-bottom: 50px;
-  }
+  //@media (min-width: @desktop-width) {
+  //  padding-bottom: 50px;
+  //}
 
   @media (min-width: @desktop-width) {
     padding-bottom: 67px;
-    padding-top: 12px;
+    padding-top: 0;
   }
 }
 
