--- a/less/header.less
+++ b/less/header.less
@@ -18,7 +18,7 @@
   @media (min-width: @desktop-width) {
     background-size: cover;
     background-color: red;
-    padding-bottom: 89px;
+    padding-bottom: 71px;
   }
 }
 
@@ -29,5 +29,12 @@
 
   @media (min-width: @desktop-width) {
     padding-bottom: 75px;
+  }
+}
+
+.page-header--photo {
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 54px;
   }
 }
