--- a/less/buttons-block.less
+++ b/less/buttons-block.less
@@ -8,6 +8,8 @@
       display: flex;
       margin-top: 141px;
       width: 100%;
+      margin-left: 90px;
+      margin-top: 140px;
     }
   }
 }
