--- a/less/filter-range.less
+++ b/less/filter-range.less
@@ -1,16 +1,18 @@
 .filter-range {
-  width: 239px;
+  width: 242px;
   position: relative;
-  left: -23px;
+  left: -20px;
 
   @media (min-width: @tablet-width) {
     width: 199px;
     padding-left: 81px;
+    left: -23px;
   }
 
   @media (min-width: @desktop-width) {
     width: 285px;
     padding-left: 162px;
+    left: -23px;
   }
 }
 
@@ -40,6 +42,10 @@
   @media (min-width: @tablet-width) {
     position: relative;
     margin-bottom: 35px;
+
+    @media (min-width: @desktop-width) {
+      margin-bottom: 32px;
+    }
   }
 }
 
