--- a/less/image-editor__image-block.less
+++ b/less/image-editor__image-block.less
@@ -1,5 +1,6 @@
 .image-editor__image-block {
   padding: 0;
+  margin-top: 21px;
 
   @media (min-width: @tablet-width) {
     background-color: aqua;
@@ -8,7 +9,8 @@
     margin-top: 22px;
 
     @media (min-width: @desktop-width) {
-      margin-left: 74px;
+      margin-left: 72px;
+      margin-top: 13px;
     }
   }
 }
