--- a/less/user-contacts.less
+++ b/less/user-contacts.less
@@ -72,6 +72,19 @@
   padding-top: 2px;
   padding-right: 37px;
 
+  &:hover {
+    border-color: #000000;
+    text-shadow: none;
+    box-shadow: none;
+  }
+
+  &:focus {
+    border-color: #d22856;
+    outline: none;
+    text-shadow: none;
+    box-shadow: none;
+  }
+
   @media (min-width: @tablet-width) {
     order: 1;
     width: 84%;
