--- a/less/form-section.less
+++ b/less/form-section.less
@@ -24,6 +24,16 @@
       width: 92%;
     }
   }
+
+  &:hover {
+    border-color: #000000;
+    outline: none;
+  }
+
+  &:focus {
+    border-color: #d22856;
+    outline: none;
+  }
 }
 
 .form-section__text {
@@ -33,6 +43,7 @@
   padding-bottom: 23px;
 
   @media (min-width: @tablet-width) {
+
     .font-mixin(60px; @content-font; 50px; normal);
     margin: 0 auto;
     width: 99%;
