--- a/less/fotm-describe.less
+++ b/less/fotm-describe.less
@@ -99,11 +99,18 @@
   text-transform: uppercase;
   color: @white;
 
-  &:active {
-    box-shadow: 1px 2px 17px 3px #000000;
-    transition-property: box-shadow;
-    transition-duration: 1s;
+  &:hover {
+    background-color: #1c9b5e;
+    outline: none;
   }
+
+  &:active {
+    color: rgba(255,255,255,.3);
+    //box-shadow: 1px 2px 17px 3px #000000;
+
+  }
+
+
 
   @media (min-width: @tablet-width) {
     width: 46%;
