--- a/less/input-form.less
+++ b/less/input-form.less
@@ -47,6 +47,19 @@
   width: 76%;
   padding-right: 22px;
 
+  &:hover {
+    border-color: #000000;
+    text-shadow: none;
+    box-shadow: none;
+  }
+
+  &:focus {
+    border-color: #d22856;
+    outline: none;
+    text-shadow: none;
+    box-shadow: none;
+  }
+
   @media (min-width: @tablet-width) {
     width: 540px;
     padding-left: 0;
