--- a/less/filter-range.less
+++ b/less/filter-range.less
@@ -74,6 +74,12 @@
   border: 3px solid #d22856;
   border-radius: 100%;
   cursor: pointer;
+
+  &:active {
+    background-color: #d22856;
+    border-color: #d22856;
+
+  }
 }
 
 .range-toggle-min {
