--- a/less/input-form.less
+++ b/less/input-form.less
@@ -46,6 +46,7 @@
   margin-left: 3px;
   width: 76%;
   padding-right: 22px;
+  border: 1px solid #e5e5e5;
 
   &:hover {
     border-color: #000000;
