--- a/less/main-nav.less
+++ b/less/main-nav.less
@@ -2,7 +2,7 @@
   align-items: flex-start;
   position: absolute;
   top: 72px;
-  left: 1px;
+  left: 0;
   width: 100%;
   background-color: @nav-menu-background;
   text-transform: uppercase;
@@ -11,9 +11,10 @@
   line-height: 32px;
   display: block;
   z-index:2;
+  border-right: none;
 
   @media (min-width: @tablet-width) {
-    display: none;
+    display: block;
   }
 
   @media (min-width: @desktop-width) {
@@ -31,14 +32,33 @@
   padding: 13px;
   text-align: center;
   flex-grow: 1;
-  width: 90%;
-  border: 1px solid #000000;
+  width: auto;
+  border-bottom: 1px solid #010101;
+  border-top: 1px solid #485461;
+  position: relative;
+  background-color: #283645;
+
+  @media (min-width: @tablet-width) {
+    width: auto;
+  }
 
   @media (min-width: @desktop-width) {
     width: auto;
     border: none;
     padding: 0;
     margin: 0;
+  }
+}
+
+.main-nav__items--active::after {
+  @media (min-width: @desktop-width) {
+    content: "";
+    position: absolute;
+    height: 2px;
+    background-color: @white;
+    top: 36px;
+    left: 20px;
+    right: 20px;
   }
 }
 
@@ -76,4 +96,31 @@
   @media (min-width: @desktop-width) {
     display: none;
   }
+}
+
+.main-nav__items {
+  a {
+    cursor: pointer;
+    &:hover {
+      color: #d22856;
+    }
+    &:active {
+      color: rgba(210, 40, 86, 0.3);
+    }
+  }
+}
+
+.main-nav--nojs .main-nav__toggle {
+  display: none;
+}
+
+.main-nav--nojs .main-nav__toggle {
+  display: none;
+}
+
+.main-nav--nojs .main-nav__list {
+  position: static;
+  min-height: 0;
+  margin: 0 auto;
+  text-align: center;
 }
