--- a/less/user-contacts.less
+++ b/less/user-contacts.less
@@ -71,6 +71,7 @@
   padding-left: 21px;
   padding-top: 2px;
   padding-right: 37px;
+  border: 1px solid #e5e5e5;
 
   &:hover {
     border-color: #000000;
