--- a/less/fotm-describe.less
+++ b/less/fotm-describe.less
@@ -105,12 +105,9 @@
   }
 
   &:active {
-    color: rgba(255,255,255,.3);
+    color: rgba(255, 255, 255, 0.3);
     //box-shadow: 1px 2px 17px 3px #000000;
-
   }
-
-
 
   @media (min-width: @tablet-width) {
     width: 46%;
