--- a/less/editor-block.less
+++ b/less/editor-block.less
@@ -85,7 +85,7 @@
 
   &:active {
     background-color: #d22856;
-    color: rgba(255, 255, 255, .3);
+    color: rgba(255, 255, 255, 0.3);
   }
 }
 
