--- a/less/blog-post.less
+++ b/less/blog-post.less
@@ -41,7 +41,7 @@
   padding-left: 0;
   padding-right: 0;
   position: relative;
-  background: aqua;
+  background: @white;
   overflow: hidden;
 
   @media (min-width: @tablet-width) {
@@ -50,12 +50,11 @@
     padding-left: 0;
     padding-right: 0;
     position: relative;
-    background: aqua;
     overflow: hidden;
   }
 
   @media (min-width: @desktop-width) {
-    height: 402px;
+    height: 400px;
   }
 }
 
