--- a/less/menu-header.less
+++ b/less/menu-header.less
@@ -1,6 +1,6 @@
 .menu-header {
   background-color: rgba(30, 39, 50, 0.63);
-  padding-bottom: 47px;
+  padding-bottom: 67px;
   width: 100%;
 
   @media (min-width: @desktop-width) {
@@ -9,7 +9,7 @@
   }
 
   @media (min-width: @tablet-width) {
-    padding-bottom: 74px;
+    padding-bottom: 98px;
   }
 }
 
@@ -17,8 +17,14 @@
   margin-top: 22px;
   margin-bottom: 20px;
   margin-left: 15px;
+
+  @media (min-width: @tablet-width) {
+    width: 155px;
+    left: 30px;
+    top: -7px;
+  }
 }
 
 .menu-header--active {
-  background-color: #283645;
+  //background-color: #283645;
 }
