--- a/less/header.less
+++ b/less/header.less
@@ -8,17 +8,35 @@
   background-position: center 0;
   background-repeat: no-repeat;
 
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../img/bg-back-mobile@2x.jpg");
+    background-position: center 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
   @media (min-width: @tablet-width) {
     background: #1d2632;
+    background-position: center 0;
+    background-repeat: no-repeat;
+    padding-bottom: 55px;
+    background-image: url("../img/bg-back-tablet@1x.jpg");
+  }
+
+  @media (min-width: @tablet-width) and (min-resolution: @retina-dpi), (min-width: @tablet-width) and (min-resolution: @retina-dppx) {
+    background-image: url("../img/bg-back-tablet@2x.jpg");
     background-size: cover;
-    background-color: red; //вспомогательый класс
-    padding-bottom: 75px;
   }
 
   @media (min-width: @desktop-width) {
     background-size: cover;
-    background-color: red;
+    background-image: url("../img/bg-back-desktop@1x.jpg");
     padding-bottom: 71px;
+  }
+
+  @media (min-width: @desktop-width) and (min-resolution: 144dpi), (min-width: @desktop-width) and (min-resolution: @retina-dppx) {
+    background-image: url("../img/bg-back-desktop@2x.jpg");
+    background-size: cover;
   }
 }
 
@@ -35,5 +53,24 @@
 .page-header--photo {
   @media (min-width: @desktop-width) {
     padding-bottom: 54px;
+  }
+}
+
+.page-header__logo-wrap {
+  position: absolute;
+  left: 13px;
+  top: 20px;
+
+  @media (min-width: @tablet-width) {
+    width: 138px;
+    height: 49px;
+  }
+}
+
+.logo-pic {
+  @media (min-width: @tablet-width) {
+    height: 106px;
+    margin-top: -27px;
+    margin-left: 24px;
   }
 }
