--- a/less/main-nav.less
+++ b/less/main-nav.less
@@ -9,12 +9,12 @@
   font-weight: bold;
   font-size: 18px;
   line-height: 32px;
-  display: block;
+  display: none;
   z-index: 2;
   border-right: none;
 
   @media (min-width: @tablet-width) {
-    display: block;
+    display: none;
   }
 
   @media (min-width: @desktop-width) {
@@ -38,18 +38,6 @@
   position: relative;
   background-color: #283645;
 
-  a {
-    cursor: pointer;
-
-    &:hover {
-      color: #d22856;
-    }
-
-    &:active {
-      color: rgba(210, 40, 86, 0.3);
-    }
-  }
-
   @media (min-width: @tablet-width) {
     width: auto;
   }
@@ -59,6 +47,7 @@
     border: none;
     padding: 0;
     margin: 0;
+    background-color: transparent;
   }
 }
 
@@ -85,6 +74,14 @@
   a {
     color: #ffffff;
     text-decoration: none;
+
+    &:hover {
+      color: #d22856;
+    }
+
+    &:active {
+      color: rgba(210, 40, 86, 0.3);
+    }
   }
 
   @media (min-width: @desktop-width) {
