--- a/less/footer.less
+++ b/less/footer.less
@@ -149,6 +149,11 @@
   }
 }
 
+.map {
+  padding: 0;
+  max-width: none;
+}
+
 .map-block {
   margin: 0 auto;
   width: 100%;
@@ -207,6 +212,37 @@ address {
   }
 }
 
+.map-block_map-item {
+  background-image: url("../img/bg-map-mobile@1x.png");
+  background-size: 100% auto;
+  background-position: 50% 0;
+  line-height: 0;
+  height: 242px;
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../img/bg-map-mobile@2x.jpg");
+  }
+
+  @media (min-width: @tablet-width) {
+    background-image: url("../img/bg-map-tablet@1x.jpg");
+    height: 415px;
+  }
+
+  @media (min-width: @tablet-width) and (min-resolution: @retina-dpi), (min-width: @tablet-width) and (min-resolution: @retina-dppx) {
+    background-image: url("../img/bg-map-tablet@2x.jpg");
+  }
+
+
+  @media (min-width: @desktop-width) {
+    background-image: url("../img/bg-map-desktop@1x.jpg");
+    height: 516px;
+  }
+
+  @media (min-width: @desktop-width) and (min-resolution: @retina-dpi), (min-width: @desktop-width) and (min-resolution: @retina-dppx) {
+    background-image: url("../img/bg-back-desktop@2x.jpg");
+  }
+}
+
 .page-footer {
   display: none;
 }
@@ -217,5 +253,17 @@ address {
 
   img {
     min-width: 100%;
+  }
+}
+
+.separator--desktop {
+  display: none;
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: inline;
   }
 }
