--- a/less/header.less
+++ b/less/header.less
@@ -10,9 +10,7 @@
 
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
     background-image: url("../img/bg-back-mobile@2x.jpg");
-    background-position: center 0;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 218%, 63%;
   }
 
   @media (min-width: @tablet-width) {
@@ -31,7 +29,7 @@
   @media (min-width: @desktop-width) {
     background-size: cover;
     background-image: url("../img/bg-back-desktop@1x.jpg");
-    padding-bottom: 71px;
+    padding-bottom: 55px;
   }
 
   @media (min-width: @desktop-width) and (min-resolution: 144dpi), (min-width: @desktop-width) and (min-resolution: @retina-dppx) {
