--- a/less/features-items.less
+++ b/less/features-items.less
@@ -41,6 +41,8 @@
   flex-grow: 1;
   width: 100%;
   padding-bottom: 16px;
+  overflow: hidden;
+  flex-grow: 1;
 
   @media (min-width: @tablet-width) {
     width: 53%;
@@ -220,10 +222,12 @@
     top: -75px;
     left: 10px;
   }
+
   @media (min-width: @tablet-width) and (min-resolution: @retina-dpi), (min-width: @tablet-width) and (min-resolution: @retina-dppx) {
     background-image: url("../img/iphone-screen-3-tablet@2x.png");
     background-size: contain;
   }
+
   @media (min-width: @desktop-width) {
     content: "";
     position: absolute;
@@ -285,6 +289,7 @@
     top: -364px;
     left: -5px;
   }
+
   @media (min-width: @desktop-width) and (min-resolution: @retina-dpi), (min-width: @desktop-width) and (min-resolution: @retina-dppx) {
     background-image: url("../img/iphone-screen-1-desktop@2x.png");
     background-repeat: no-repeat;
