--- a/less/reviews.less
+++ b/less/reviews.less
@@ -5,15 +5,16 @@
   width: 100%;
   padding-bottom: 176px;
   margin-top: 0;
+  position: relative;
 
   @media (min-width: @tablet-width) {
     font-size: 18px;
-    padding-bottom: 0;
+    padding-bottom: 8px;
   }
 
   @media (min-width: @desktop-width) {
-    padding-top: 163px;
-    padding-bottom: 36px;
+    padding-top: 0;
+    padding-bottom: 0;
   }
 }
 
@@ -23,14 +24,14 @@
   flex-grow: 1;
 
   @media (min-width: @tablet-width) {
-    width: 100%;
+    width: 103%;
     margin: 0 auto;
-    padding-top: 99px;
-    padding-bottom: 132px;
+    padding-top: 84px;
+    padding-bottom: 0;
   }
 
   @media (min-width: @desktop-width) {
-    padding-top: 124px;
+    padding-top: 187px;
     padding-left: 0;
   }
 }
