--- a/less/traffic-table.less
+++ b/less/traffic-table.less
@@ -14,12 +14,14 @@
   @media (min-width: @tablet-width) {
     width: 99%;
     transform: none;
+    margin-left: 10px;
   }
 
   @media (min-width: @desktop-width) {
     width: 932px;
     border: none;
     transform: none;
+    margin: 0 auto;
   }
 }
 
