--- a/less/features-items.less
+++ b/less/features-items.less
@@ -8,23 +8,43 @@
   margin: 0;
   padding: 0;
   flex-direction: column;
+  background-color: #f2f2f2;
 
   .mobile_hidden {
     display: none;
 
     @media (min-width: @tablet-width) {
-      display: block;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      width: 100%;
     }
 
     @media (min-width: @desktop-width) {
-      margin: 0 auto;
+      margin: 0;
       display: flex;
-      flex-direction: column;
-      padding-top: 8px;
-      padding-left: 74px;
-      width: auto;
+      padding-top: 119px;
+      padding-left: 0;
+      padding-bottom: 50px;
+      width: 100%;
       align-self: flex-end;
     }
+  }
+}
+
+.mobile_hidden::after {
+  content: "24";
+  position: absolute;
+  top: 174px;
+  left: 107px;
+  font-size: 96px;
+  font-weight: bold;
+  color: #d22856;
+
+  @media (min-width: @desktop-width) {
+    top: 211px;
+    left: 77px;
+    font-size: 115px;
   }
 }
 
@@ -44,11 +64,13 @@
   overflow: hidden;
 
   @media (min-width: @tablet-width) {
-    width: 53%;
+    width: 51%;
     padding-right: 0;
     align-self: flex-end;
     margin-left: auto;
-    padding-bottom: 20px;
+    margin-top: 24px;
+    margin-bottom: 0;
+    padding-bottom: 0;
   }
 
   @media (min-width: @desktop-width) {
@@ -60,6 +82,7 @@
     font-size: 18px;
     padding-right: 0;
     margin-left: 0;
+    margin-top: 0;
   }
 }
 
@@ -85,6 +108,7 @@
     line-height: 30px;
     width: auto;
     padding-left: 0;
+    margin-top: 60px;
   }
 }
 
@@ -93,19 +117,20 @@
 
     .font-mixin(33px; @header-font; 30px; bold);
     width: auto;
-    padding-left: 18px;
-    margin-top: 100px;
+    padding-left: 15px;
+    margin-top: 78px;
     margin-bottom: 0;
-    padding-bottom: 20px;
+    padding-bottom: 17px;
   }
 
   @media (min-width: @desktop-width) {
     font-size: 30px;
     width: auto;
-    margin-left: auto;
     margin-right: auto;
+    margin-bottom: 0;
+    padding-left: 0;
     letter-spacing: 1px;
-    padding-left: 18px;
+    margin-top: 18px;
   }
 }
 
@@ -139,7 +164,7 @@
   @media (min-width: @tablet-width) {
     text-align: left;
     width: 305px;
-    padding-left: 20px;
+    padding-left: 15px;
     margin-top: 0;
   }
 
@@ -151,14 +176,14 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 0;
-    padding-left: 247px;
     padding-top: 0;
     text-align: left;
+    padding-right: 25px;
+    padding-left: 0;
   }
 
   @media (min-width: @desktop-width) {
     width: 548px;
-    padding-left: 270px;
     text-align: left;
     align-self: flex-end;
   }
@@ -182,31 +207,33 @@
 
 .features-items__link {
   @media (min-width: @tablet-width) {
-    margin-left: 20px;
+    margin-left: 17px;
     color: #d22856;
     text-decoration: underline;
 
     @media (min-width: @desktop-width) {
       margin-left: auto;
       margin-right: auto;
-      padding-left: 8px;
+      padding-left: 0;
+      margin-left: 0;
       padding-top: 33px;
     }
   }
 }
 
 .features-items-group {
+  @media (min-width: @tablet-width) {
+    padding-bottom: 26px;
+    background-color: #f2f2f2;
+  }
   @media (min-width: @desktop-width) {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding-top: 319px;
+    padding-top: 0;
     position: relative;
 
-    @media (min-width: @tablet-width) {
-      padding-bottom: 21px;
-    }
   }
 }
 
@@ -218,8 +245,9 @@
     background-repeat: no-repeat;
     width: 300px;
     height: 484px;
-    top: -75px;
-    left: 10px;
+    top: -42px;
+    left: 29px;
+    z-index: 2;
   }
 
   @media (min-width: @tablet-width) and (min-resolution: @retina-dpi), (min-width: @tablet-width) and (min-resolution: @retina-dppx) {
@@ -229,8 +257,9 @@
 
   @media (min-width: @desktop-width) {
     content: "";
+    background-image: none;
     position: absolute;
-    background-image: url("");
+    background-image: none;
   }
 }
 
@@ -277,16 +306,31 @@
   box-sizing: border-box;
 }
 
+.features-items__block--one,
+.features-items__block--two,
+.features-items__block--three {
+  display: none;
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
+  @media (min-width: @desktop-width) {
+    display: block;
+    width: 292px;
+    height: 302px;
+  }
+}
+
 .features-items__block--one::before {
   @media (min-width: @desktop-width) {
-    content: "";
+    content: " ";
     position: absolute;
     background-image: url("../img/iphone-screen-1-desktop@1x.png");
     background-repeat: no-repeat;
     width: 300px;
     height: 484px;
-    top: -364px;
-    left: -5px;
+    top: 4px;
+    left: 0;
   }
 
   @media (min-width: @desktop-width) and (min-resolution: @retina-dpi), (min-width: @desktop-width) and (min-resolution: @retina-dppx) {
@@ -308,8 +352,8 @@
     background-repeat: no-repeat;
     width: 300px;
     height: 484px;
-    top: -364px;
-    left: -5px;
+    top: 4px;
+    left: 0;
   }
 
   @media (min-width: @desktop-width) and (min-resolution: @retina-dpi), (min-width: @desktop-width) and (min-resolution: @retina-dppx) {
@@ -327,8 +371,8 @@
     background-repeat: no-repeat;
     width: 300px;
     height: 484px;
-    top: -364px;
-    left: -5px;
+    top: 4px;
+    left: 0;
   }
 
   @media (min-width: @desktop-width) and (min-resolution: @retina-dpi), (min-width: @desktop-width) and (min-resolution: @retina-dppx) {
@@ -336,3 +380,20 @@
     background-size: contain;
   }
 }
+
+.text-wrapper {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: 12px;
+  margin-top: -4px;
+
+  @media (min-width: @desktop-width) {
+    width: auto;
+    margin-top: 2px;
+    margin-right: 0;
+
+  }
+}
+
