--- a/less/features-items.less
+++ b/less/features-items.less
@@ -59,8 +59,9 @@
   position: relative;
   z-index: 3;
   flex-grow: 1;
-  width: 100%;
-  padding-bottom: 16px;
+  width: 91%;
+  margin: 0 auto;
+  padding-bottom: 15px;
   overflow: hidden;
 
   @media (min-width: @tablet-width) {
@@ -71,6 +72,7 @@
     margin-top: 24px;
     margin-bottom: 0;
     padding-bottom: 0;
+    margin-right: 0;
   }
 
   @media (min-width: @desktop-width) {
@@ -193,8 +195,8 @@
   max-width: 100%;
   width: 155px;
   height: 253px;
-  padding-bottom: 26px;
-  margin-bottom: 8px;
+  padding-bottom: 17px;
+  margin-bottom: 0;
   margin-top: 8px;
   overflow: hidden;
   margin-left: auto;
@@ -222,9 +224,11 @@
 }
 
 .features-items-group {
+  margin-top: 57px;
   @media (min-width: @tablet-width) {
     padding-bottom: 26px;
     background-color: #f2f2f2;
+    margin-top: 0;
   }
   @media (min-width: @desktop-width) {
     display: flex;
@@ -233,6 +237,7 @@
     justify-content: space-between;
     padding-top: 0;
     position: relative;
+    margin-top: 0;
 
   }
 }
