--- a/less/footer.less
+++ b/less/footer.less
@@ -8,7 +8,7 @@
   align-content: center;
   flex-direction: row;
   justify-content: space-between;
-  padding-top: 42px;
+  padding-top: 26px;
 
   @media (min-width: @tablet-width) {
     padding-top: 0;
@@ -32,7 +32,7 @@
 .info-block__text {
 
   .font-mixin(24px; @content-font; 24px; normal);
-  padding-top: 84px;
+  padding-top: 0;
   text-align: center;
 
   @media (min-width: @tablet-width) {
@@ -203,6 +203,7 @@ address {
   font-style: normal;
   width: auto;
   outline: none;
+  padding-bottom: 42px;
 
   @media (min-width: @tablet-width) {
     width: auto;
@@ -222,7 +223,7 @@ address {
   background-size: 100% auto;
   background-position: 50% 0;
   line-height: 0;
-  height: 242px;
+  height: 198px;
   margin: 0 auto;
   width: 100%;
   position: relative;
