--- a/less/price-block.less
+++ b/less/price-block.less
@@ -3,6 +3,7 @@
   background-color: @white;
   overflow: hidden;
   position: relative;
+  margin-top: 16px;
 
   @media (min-width: @tablet-width) {
     margin-top: 0;
@@ -21,6 +22,9 @@
 
 .table-background {
   background-color: #f2f2f2;
+  padding-top: 88px;
+  padding-bottom: 44px;
+
   @media (min-width: @tablet-width) {
     margin-top: 56px;
     padding-bottom: 68px;
@@ -42,8 +46,9 @@
     margin-left: 10px;
 
     @media (min-width: @desktop-width) {
-      padding-top: 149px;
-      margin-left: 129px;
+      padding-top: 63px;
+      //margin-left: 129px;
+      margin: 0 auto;
     }
   }
 }
