--- a/less/reviews.less
+++ b/less/reviews.less
@@ -3,7 +3,7 @@
   .font-mixin(30px, @header-font, 14px, normal);
   background-color: @white;
   width: 100%;
-  padding-bottom: 176px;
+  padding-bottom: 0;
   margin-top: 0;
   position: relative;
 
@@ -22,10 +22,11 @@
   display: flex;
   flex-direction: column-reverse;
   flex-grow: 1;
+  width: auto;
+  margin: 0 auto;
 
   @media (min-width: @tablet-width) {
     width: 103%;
-    margin: 0 auto;
     padding-top: 84px;
     padding-bottom: 0;
   }
@@ -37,10 +38,11 @@
 }
 
 .slider-reviews__header {
-  margin-top: 32px;
+  margin-top: 50px;
   font-size: 18px;
   text-align: center;
   letter-spacing: 1px;
+  order: 4;
 
   @media (min-width: @tablet-width) {
 
@@ -72,6 +74,7 @@
 .slider-reviews__text {
   text-align: center;
   width: auto;
+  order: 3;
 
   @media (min-width: @tablet-width) {
     order: 3;
@@ -86,3 +89,4 @@
     margin: 0 auto;
   }
 }
+
