--- a/less/slider.less
+++ b/less/slider.less
@@ -1,6 +1,11 @@
 .slider {
+  margin-bottom: 10px;
   position: relative;
-
+  margin-top: 23px;
+  @media (min-width: @tablet-width) {
+    position: relative;
+    margin-top: 0;
+  }
   @media (min-width: @desktop-width) {
     display: none;
   }
@@ -28,13 +33,12 @@
   cursor: pointer;
 }
 
-//
-//#radio-slider-1:checked ~ .slider__slider-controls label {
-//  border: 3px solid #000000;
-//  width: 6px;
-//  height: 6px;
-//  background-color: @white;
-//}
+#radio-slider-1:checked ~ .slider__slider-controls label {
+  border: 3px solid #000000;
+  width: 6px;
+  height: 6px;
+  background-color: @white;
+}
 
 .toggle-arrow {
   display: none;
@@ -56,7 +60,16 @@
   left: 81px;
   top: 212px;
 }
+
 .toggle-arrow--prev {
   right: 67px;
   top: 214px;
+}
+
+.slider--mobile {
+  display: block;
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
 }
