--- a/less/slider.less
+++ b/less/slider.less
@@ -57,12 +57,12 @@
 
 .toggle-arrow--next {
   transform: scale(-1, -1);
-  left: 81px;
+  left: 0;
   top: 212px;
 }
 
 .toggle-arrow--prev {
-  right: 67px;
+  right: 0;
   top: 214px;
 }
 
