--- a/less/svg.less
+++ b/less/svg.less
@@ -108,7 +108,8 @@
     display: block;
     position: absolute;
     fill: #efefef;
-    left: 565px;
+    left: 50%;
+    right: 50%;
     top: 76px;
   }
 }
