--- a/less/footer.less
+++ b/less/footer.less
@@ -253,7 +253,7 @@ address {
   }
 
   @media (min-width: @desktop-width) and (min-resolution: @retina-dpi), (min-width: @desktop-width) and (min-resolution: @retina-dppx) {
-    background-image: url("../img/bg-back-desktop@2x.jpg");
+    background-image: url("../img/bg-map-desktop@2x.jpg");
   }
 }
 
