--- a/less/price-block.less
+++ b/less/price-block.less
@@ -26,12 +26,12 @@
   padding-bottom: 44px;
 
   @media (min-width: @tablet-width) {
-    margin-top: 56px;
+    margin-top: 0;
     padding-bottom: 68px;
     margin-left: 0;
   }
   @media (min-width: @desktop-width) {
-    margin-top: 23px;
+    margin-top: 0;
     padding-bottom: 90px;
   }
 }
@@ -42,7 +42,7 @@
 
 .table-wrapper {
   @media (min-width: @tablet-width) {
-    padding-top: 34px;
+    padding-top: 0;
     margin-left: 10px;
 
     @media (min-width: @desktop-width) {
