--- a/less/footer.less
+++ b/less/footer.less
@@ -213,7 +213,7 @@ address {
 
   @media (min-width: @desktop-width) {
     margin-left: 0;
-    margin-bottom: 8px;
+    margin-bottom: 0;
     padding-bottom: 0;
   }
 }
@@ -228,6 +228,13 @@ address {
   width: 100%;
   position: relative;
 
+  &::before {
+    content: " ";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url("../img/figure_footer.svg") no-repeat;
+  }
   img {
     min-width: 100%;
   }
@@ -249,7 +256,7 @@ address {
 
   @media (min-width: @desktop-width) {
     background-image: url("../img/bg-map-desktop@1x.jpg");
-    height: 516px;
+    height: 531px;
   }
 
   @media (min-width: @desktop-width) and (min-resolution: @retina-dpi), (min-width: @desktop-width) and (min-resolution: @retina-dppx) {
@@ -272,3 +279,4 @@ address {
     display: inline;
   }
 }
+
