--- a/less/page-shown-footer.less
+++ b/less/page-shown-footer.less
@@ -2,6 +2,7 @@
   width: 100%;
   text-align: center;
   background-color: @white;
+  display: none;
 
   @media (min-width: @tablet-width) {
     display: block;
@@ -65,3 +66,4 @@
     justify-content: space-between;
   }
 }
+
