--- a/less/svg.less
+++ b/less/svg.less
@@ -65,25 +65,10 @@
   z-index: 1;
   position: absolute;
   transform: none;
-  top: -56px;
-  left: 1px;
-  height: 135px;
+  top: 0;
+  left: 0;
+  height: auto;
   width: 100%;
-
-  @media (min-width: @tablet-width) {
-    fill: #f2f2f2;
-    z-index: 1;
-    transform: scale(-1, -1);
-    top: -36px;
-    left: 1px;
-    height: 135px;
-
-    @media (min-width: @desktop-width) {
-      fill: @white;
-      transform: none;
-      top: 0;
-    }
-  }
 }
 
 .svg-pic--footer {
